--- a/style.css
+++ b/style.css
@@ -234,6 +234,33 @@ ul {
   font-size: 12px;
 }
 
+/*============================
+Loading icon and text
+==============================*/
+.loading {
+  text-align: center;
+  margin-top: 3rem;
+}
+
+.spinner {
+  width: 50px;
+  height: 50px;
+  border: 4px solid #ccc;
+  border-top: 5px solid #1707a2;
+  border-radius: 50%;
+  animation: spin 1s linear infinite; /* refer to the animation 'spin' defined below */
+  margin: 1rem auto;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 /* ===== Tablet (>= 768px) ===== */
 @media (min-width: 768px) {
   .top-nav {
